--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,8 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/favicon.ico",
+              "src/_redirects",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -86,11 +88,14 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/favicon.ico",
+              "src/_redirects",
               {
                 "glob": "**/*",
                 "input": "public"
               }
-            ],
+            ]
+          ,
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.scss"
